// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionSection /> Variants properly renders a default accordion 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  padding-left: 1rem;
  padding-right: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  cursor: pointer;
  background: #F2F2F2;
  border-bottom: 1px solid #E0E1E2;
}

.emotion-0 .button--minimal:last-of-type {
  margin-right: -0.25rem;
}

.emotion-0 .button--minimal:last-of-type+:not(object) {
  margin-left: 0.25rem;
}

.emotion-0 button+.button--secondary,
.emotion-0 button+.button--primary {
  margin-left: 0.5rem;
}

section:last-child .emotion-0 {
  border-bottom: none;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  font-size: inherit;
  font-weight: 400;
  padding: 0;
}

.emotion-3 {
  margin-right: 0.75rem;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.emotion-4 {
  font-family: Motiva Sans;
  overflow: hidden;
  box-sizing: border-box;
  display: none;
  border-bottom: 1px solid #E0E1E2;
}

section:last-child .emotion-4 {
  border-bottom: none;
  border-top: 1px solid #E0E1E2;
}

<section>
  <header
    aria-controls="my-accordion-1"
    aria-expanded={false}
    className="emotion-0"
    onClick={[Function]}
  >
    <h1
      className="emotion-1"
      color="text.dark"
      fontSize="size4"
      fontWeight="medium"
    >
      <span
        aria-controls="my-accordion-1"
        aria-expanded={false}
        className="emotion-2"
      >
        <i
          className="ar ar-chevron emotion-3"
        />
        My Accordion
      </span>
    </h1>
  </header>
  <div
    className="emotion-4"
    display="none"
    id="my-accordion-1"
    overflow="hidden"
  >
    <p>
      Hello World
    </p>
  </div>
</section>
`;

exports[`<AccordionSection /> Variants properly renders a minimal accordion 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  padding-left: 1rem;
  padding-right: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  cursor: pointer;
}

.emotion-0 .button--minimal:last-of-type {
  margin-right: -0.25rem;
}

.emotion-0 .button--minimal:last-of-type+:not(object) {
  margin-left: 0.25rem;
}

.emotion-0 button+.button--secondary,
.emotion-0 button+.button--primary {
  margin-left: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  font-size: inherit;
  font-weight: 400;
  padding: 0;
}

.emotion-3 {
  margin-right: 0.75rem;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.emotion-4 {
  font-family: Motiva Sans;
  overflow: hidden;
  box-sizing: border-box;
  display: none;
}

<section>
  <header
    aria-controls="my-accordion-1"
    aria-expanded={false}
    className="emotion-0"
    onClick={[Function]}
  >
    <h1
      className="emotion-1"
      color="text.dark"
      fontSize="size4"
      fontWeight="medium"
    >
      <span
        aria-controls="my-accordion-1"
        aria-expanded={false}
        className="emotion-2"
      >
        <i
          className="ar ar-chevron emotion-3"
        />
        My Accordion
      </span>
    </h1>
  </header>
  <div
    className="emotion-4"
    display="none"
    id="my-accordion-1"
    overflow="hidden"
  >
    <p>
      Hello World
    </p>
  </div>
</section>
`;

exports[`<AccordionSection /> render accordion is closed renders with the panel hidden 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  padding-left: 1rem;
  padding-right: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  cursor: pointer;
  background: #F2F2F2;
  border-bottom: 1px solid #E0E1E2;
}

.emotion-0 .button--minimal:last-of-type {
  margin-right: -0.25rem;
}

.emotion-0 .button--minimal:last-of-type+:not(object) {
  margin-left: 0.25rem;
}

.emotion-0 button+.button--secondary,
.emotion-0 button+.button--primary {
  margin-left: 0.5rem;
}

section:last-child .emotion-0 {
  border-bottom: none;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  font-size: inherit;
  font-weight: 400;
  padding: 0;
}

.emotion-3 {
  margin-right: 0.75rem;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.emotion-4 {
  font-family: Motiva Sans;
  overflow: hidden;
  box-sizing: border-box;
  display: none;
  border-bottom: 1px solid #E0E1E2;
}

section:last-child .emotion-4 {
  border-bottom: none;
  border-top: 1px solid #E0E1E2;
}

<section>
  <header
    aria-controls="my-accordion-1"
    aria-expanded={false}
    className="emotion-0"
    onClick={[Function]}
  >
    <h1
      className="emotion-1"
      color="text.dark"
      fontSize="size4"
      fontWeight="medium"
    >
      <span
        aria-controls="my-accordion-1"
        aria-expanded={false}
        className="emotion-2"
      >
        <i
          className="ar ar-chevron emotion-3"
        />
        My Accordion
      </span>
    </h1>
  </header>
  <div
    className="emotion-4"
    display="none"
    id="my-accordion-1"
    overflow="hidden"
  >
    <p>
      Hello World
    </p>
  </div>
</section>
`;

exports[`<AccordionSection /> render accordion is open renders with the panel visible 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  padding-left: 1rem;
  padding-right: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  cursor: pointer;
  background: #F2F2F2;
  border-bottom: 1px solid #E0E1E2;
}

.emotion-0 .button--minimal:last-of-type {
  margin-right: -0.25rem;
}

.emotion-0 .button--minimal:last-of-type+:not(object) {
  margin-left: 0.25rem;
}

.emotion-0 button+.button--secondary,
.emotion-0 button+.button--primary {
  margin-left: 0.5rem;
}

section:last-child .emotion-0 {
  border-bottom: none;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  font-size: inherit;
  font-weight: 400;
  padding: 0;
}

.emotion-3 {
  margin-right: 0.75rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  overflow: hidden;
  box-sizing: border-box;
  display: block;
  border-bottom: 1px solid #E0E1E2;
}

section:last-child .emotion-4 {
  border-bottom: none;
  border-top: 1px solid #E0E1E2;
}

<section>
  <header
    aria-controls="my-accordion-1"
    aria-expanded={true}
    className="emotion-0"
    onClick={[Function]}
  >
    <h1
      className="emotion-1"
      color="text.dark"
      fontSize="size4"
      fontWeight="medium"
    >
      <span
        aria-controls="my-accordion-1"
        aria-expanded={true}
        className="emotion-2"
      >
        <i
          className="ar ar-chevron emotion-3"
        />
        My Accordion
      </span>
    </h1>
  </header>
  <div
    className="emotion-4"
    display="block"
    id="my-accordion-1"
    overflow="hidden"
  >
    <p>
      Hello World
    </p>
  </div>
</section>
`;
